codama-macros/tests/node_attribute/no_node.fail.stderr
error: node is missing
 --> tests/node_attribute/no_node.fail.rs:3:10
  |
3 | #[codama(node())]
  |          ^^^^^^
